[tool.poetry]
name = "dgenape-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dgenape_be"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
asyncpg = "^0.27.0"
aio-pika = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
